--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
   <body>
     <h1>Arabic Keyboard</h1>
     <div id="editor"></div>
-    <script type="text/javascript" src="//unpkg.com/mithril/mithril.js"></script>
-    <script type="text/javascript" src="main.js"></script>
+    <script type="text/javascript" src="main.bundle.js"></script>
   </body>
 </html>
